<?xml version="1.0"?>

<resources>

    <string name="app_name">Recipe Guru</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="group_members">Stephanie Parrish | Mason Monday</string>
    <string name="group_name">Auburn University</string>
    <string name="semester_class">COMP3710 Spring 2018</string>
    <string name="new_recipe">NEW RECIPE</string>
    <string name="recipes">RECIPES</string>
    <string name="favorites">FAVORITES</string>
    <string name="settings">SETTINGS</string>
    <string name="share_recipe">Share your recipe with friends!</string>
    /login_page.xml
    <string name="forgot_password_button">Forgot Password?</string>
    <string name="create_account_button">Create Account</string>
    <string name="same_password_different">Passwords Do Not Match</string>
    /main_menu.xml
    <string name="title_activity_splash">Splash</string>
    <string name="main_activity_btn_click_here">Click Here!!</string>
    <string name="title_activity_recipe">RecipeActivity</string>
    <string name="appetizer_button">Appetizer</string>
    <string name="breakfast_button">Breakfast</string>
    <string name="lunch_button">Lunch</string>
    <string name="dinner_button">Dinner</string>
    <string name="desserts_button">Desserts</string>

    <string name="enter_recipe_name">Recipe Name:</string>
    <string name="prep_time">Prep Time:</string>
    <string name="cook_time">Cook Time:</string>
    <string name="total_time">Total Time:</string>
    <string name="search">Search</string>
    <string name="create_new_recipe">CREATE NEW RECIPE</string>
    <string name="choose_recipe_type">Choose Recipe Type</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="add_step">Add Instruction Step</string>
    <string name="serving_text"># Servings:</string>
    <string name="SAVE">SAVE</string>

    <string name="tbsp">tbsp</string>
    <string name="tsp">tsp</string>
    <string name="ounce">ounce</string>
    <string name="cup">cup</string>
    <string name="pint">pint</string>
    <string name="pieces">piece(s)</string>
    <string name="gallon">gallon</string>
    <string name="add_instruction_step">ADD INSTRUCTION STEP</string>
    <string name="step_number">Step Number</string>
    <string name="instruction_text">Instruction Text</string>
    <string name="save">SAVE</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="ingredient_name">Ingredient Name</string>
    <string name="amount">Amount</string>
</resources>