<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/recipe_id">

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_instruction_step"
        android:textSize="@dimen/h1"
        android:textColor="@color/colorNavy"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <EditText
        android:id="@+id/step_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/space16"
        android:textColor="@color/colorNavy"
        android:inputType="number"
        android:layout_gravity="center_horizontal"
        android:text="@string/step_number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="112dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorNavy"
            android:textSize="@dimen/h1"
            android:text="@string/instruction_text" />

        <EditText
            android:id="@+id/step_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/space16"
            android:height="500dp" />

    </LinearLayout>

    <Button
        android:id="@+id/instruction_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/save" />

</LinearLayout>