<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.auburn.eng.csse.comp3710.a2b2b.recipeguru.Splash"
    android:background="@color/colorWhite">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorWhite" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:src="@drawable/recipegurulogo"
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:lines="1"
        android:text="@string/group_members"
        android:textAppearance="@style/Regular"
        android:textSize="@dimen/h1"
        android:textColor="@color/colorNavy"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:lines="1"
        android:text="@string/group_name"
        android:textAppearance="@style/Regular"
        android:textSize="@dimen/h1"
        android:textColor="@color/colorNavy"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="11dp"
        android:lines="1"
        android:text="@string/semester_class"
        android:textAppearance="@style/Regular"
        android:textSize="@dimen/h1"
        android:textColor="@color/colorNavy"/>
</RelativeLayout>
